[package]
name = "lampo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.123", features = ["max_level_trace"], optional = true }
lightning-block-sync = { version = "0.0.123", optional = true }
lightning-persister = { version = "0.0.123", optional = true }
lightning-background-processor = { version = "0.0.123", optional = true }
lightning-net-tokio = { version = "0.0.123", optional = true }
lightning-rapid-gossip-sync = { version = "0.0.123", optional = true }
lightning-invoice = { version = "0.31", optional = true }
bitcoin = { version = "0.30.2", features = ["serde"] }
clightningrpc-conf = { git = "https://github.com/laanwj/cln4rust.git", branch = "master" }
crossbeam-channel = "0.5.8"
anyhow = "1.0.70"
colored = "1.9"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
serde_json = "1.0"
serde = "1.0"
hex = "0.4.3"
time = { version = "0.3.36", features = ["std"] }

# RGB dependencies
rgb-lightning = { version = "0.0.123", package = "lightning", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-background-processor = { version = "0.0.123", package = "lightning-background-processor", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-block-sync = { version = "0.0.123", package = "lightning-block-sync", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-persister = { version = "0.0.123", package = "lightning-persister", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-net-tokio = { version = "0.0.123", package = "lightning-net-tokio", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-rapid-gossip-sync = { version = "0.0.123", package = "lightning-rapid-gossip-sync", git = "https://github.com/RGB-tools/rust-lightning", optional = true }
rgb-lightning-invoice = { version = "0.31.0", package = "lightning-invoice", git = "https://github.com/RGB-tools/rust-lightning", optional = true }

[features]
default = []
vanilla = [
        "lightning",
        "lightning-block-sync",
        "lightning-persister",
        "lightning-background-processor",
        "lightning-net-tokio",
        "lightning-rapid-gossip-sync",
        "lightning-invoice",
]
rgb = [
    "rgb-lightning",
    "rgb-lightning-block-sync",
    "rgb-lightning-persister",
    "rgb-lightning-net-tokio",
    "rgb-lightning-background-processor",
    "rgb-lightning-invoice",
    "rgb-lightning-rapid-gossip-sync",
]
